--- a/qa/suites/rados/valgrind-leaks/1-start.yaml
+++ b/qa/suites/rados/valgrind-leaks/1-start.yaml
@@ -22,8 +22,8 @@ overrides:
       osd:
         osd fast shutdown: false
     valgrind:
-      mon: [--tool=memcheck, --leak-check=full, --show-reachable=yes]
-      osd: [--tool=memcheck]
+        mon: [--tool=memcheck, --leak-check=full, --show-reachable=yes, --gen-suppressions=all]
+        osd: [--tool=memcheck, --gen-suppressions=all]
 roles:
 - [mon.a, mon.b, mon.c, mgr.x, mgr.y, osd.0, osd.1, osd.2, client.0]
 tasks:
