--- a/qa/suites/rados/verify/validater/valgrind.yaml
+++ b/qa/suites/rados/verify/validater/valgrind.yaml
@@ -26,8 +26,8 @@ overrides:
       - \(SLOW_OPS\)
       - slow request
     valgrind:
-      mon: [--tool=memcheck, --leak-check=full, --show-reachable=yes]
-      osd: [--tool=memcheck]
-      mds: [--tool=memcheck]
+      mon: [--tool=memcheck, --leak-check=full, --show-reachable=yes --gen-suppressions=all]
+      osd: [--tool=memcheck --gen-suppressions=all]
+      mds: [--tool=memcheck --gen-suppressions=all]
 # https://tracker.ceph.com/issues/38621
 #      mgr: [--tool=memcheck]
